<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:paddingTop="60dp"
    android:tag="currencies_fragment"
    tools:context="uk.ac.uclan.nkasenides.currencyconverter.CurrenciesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/currencies_infoText"
        android:textSize="26sp"
        android:text="@string/currencies_infoText"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:id="@+id/currencies_instructions"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencies_instr1"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/currencies_instr1"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:tint="#FF0000"
            android:src="@mipmap/ic_compare_arrows_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencies_instr2"
            android:textSize="10sp"
            android:textStyle="bold"
            android:text="@string/currencies_instr2"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:scaleType="fitXY"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:src="@drawable/dark_star"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/currencies_instr3"
            android:textSize="10sp"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:text="@string/currencies_instr3"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/currencies_listview">
    </ListView>

</LinearLayout>
